--- a/NetduinoI2CLCD/NetduinoI2CLCD/NetduinoI2CLCD.csproj
+++ b/NetduinoI2CLCD/NetduinoI2CLCD/NetduinoI2CLCD.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
-    <Compile Include="DriverLCDI2C.cs" />
+    <Compile Include="I2CLCD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
