--- a/NetduinoI2CLCD/I2CLCD/I2CLCD.csproj
+++ b/NetduinoI2CLCD/I2CLCD/I2CLCD.csproj
@@ -1,18 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <AssemblyName>NetduinoI2CLCD</AssemblyName>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>NetduinoI2CLCD</RootNamespace>
+    <AssemblyName>I2CLCD</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>I2CLCD</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{463D659B-CA83-45A8-9A9E-59AFEFA564F6}</ProjectGuid>
+    <ProjectGuid>{3A098DA0-BC9E-4F8B-8722-E22CDF1007F7}</ProjectGuid>
     <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
-    <DeployDevice>Netduino</DeployDevice>
-    <DeployTransport>USB</DeployTransport>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,18 +30,12 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
+    <Compile Include="I2CLCD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Hardware" />
-    <Reference Include="Microsoft.SPOT.Native" />
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\I2CLCD\I2CLCD.csproj">
-      <Project>{3A098DA0-BC9E-4F8B-8722-E22CDF1007F7}</Project>
-      <Name>I2CLCD</Name>
-    </ProjectReference>
+    <Reference Include="Microsoft.SPOT.Native">
+    </Reference>
   </ItemGroup>
 </Project>
