--- a/NetduinoI2CLCD/I2CLCD/I2CLCD.csproj
+++ b/NetduinoI2CLCD/I2CLCD/I2CLCD.csproj
@@ -39,6 +39,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="I2CLcd.cd" />
   </ItemGroup>
 </Project>
