--- a/I2CLCD/Netduino/Netduino.csproj
+++ b/I2CLCD/Netduino/Netduino.csproj
@@ -1,18 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <AssemblyName>NetduinoI2CLCD</AssemblyName>
+    <AssemblyName>Netduino</AssemblyName>
     <OutputType>Exe</OutputType>
-    <RootNamespace>NetduinoI2CLCD</RootNamespace>
+    <RootNamespace>Netduino</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{463D659B-CA83-45A8-9A9E-59AFEFA564F6}</ProjectGuid>
+    <ProjectGuid>{B8E3CD80-6BD8-4A68-9E8A-02214D753A0D}</ProjectGuid>
     <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
     <DeployDevice>Netduino</DeployDevice>
     <DeployTransport>USB</DeployTransport>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,16 +36,24 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="I2CLCD">
-      <HintPath>..\I2CLCD\bin\Release\I2CLCD.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.SPOT.Hardware" />
+    <Reference Include="Microsoft.SPOT.Hardware.SerialPort" />
     <Reference Include="Microsoft.SPOT.Native" />
+    <Reference Include="MicroToolsKit, Version=1.4.3.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebGE.MicroToolsKit.1.4.3\lib\netmf43\MicroToolsKit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SecretLabs.NETMF.Hardware" />
+    <Reference Include="SecretLabs.NETMF.Hardware.Netduino" />
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Doc_A_Consulter\IHMSSI.jpg" />
-    <Content Include="Lisez-moi.txt" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\I2CLCD\I2CLCD.csproj">
+      <Project>{33ADEEB0-35BB-4C86-89C6-956C4E158917}</Project>
+      <Name>I2CLCD</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
